secret attraction link

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,6 +115,7 @@
                 <li><a href="http://megaloteria.net" target="_blank">MegaLoteria</a></li>
                 <li><a href="http://baladasusp.com" target="_blank">BaladasUSP</a></li>
                 <li class="divider"></li>
+                <li><a href="http://secret-attraction.herokuapp.com" target="_blank">Secret Attraction</a></li>
                 <li><a href="http://secret-todo-list.herokuapp.com" target="_blank">Secret TODO-List</a></li>
                 <li><a href="http://secret-passwords.herokuapp.com" target="_blank">Secret Passwords</a></li>
                 <li><a href="http://propagation.herokuapp.com" target="_blank">Secret Propagation</a></li>
