--- a/templates/base.html
+++ b/templates/base.html
@@ -211,6 +211,12 @@
                         <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/doacoes/164x37-doar-preto-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
                         </form>
                     </li>
+
+                    <li class="list-group-item">
+                        <script data-gittip-username="paulocheque"
+                                data-gittip-widget="button"
+                                src="//gttp.co/v1.js"></script>
+                    </li>
                 </div>
               </div>
             </div>
