account form layout

--- a/templates/accounts/user_page.html
+++ b/templates/accounts/user_page.html
@@ -28,7 +28,7 @@
           <label for="new_password">New Password</label>
           <input id="new_password" name="new_password" type="password" placeholder="" class="form-control input-lg" required="" autocomplete="off"/>
       </div>
-      <button type="submit" class="btn btn-primary" style="vertical-align: bottom;">Change password</button>
+      <button type="submit" class="btn btn-primary">Change password</button>
   </form>
   <div class="control-group">
       <label class="btnRandomPassword"></label>
