Better partial templates. Skype button. Vertical ad.

--- a/templates/ads/boobox_vertical_banner.html
+++ b/templates/ads/boobox_vertical_banner.html
@@ -1,1 +1,8 @@
-boobox_vertical_banner.html
+<script type="text/javascript">
+    bb_bid = "1693003";
+    bb_lang = "en-US";
+    bb_name = "custom";
+    bb_limit = "5";
+    bb_format = "bbh";
+</script>
+<script type="text/javascript" src="http://static.boo-box.com/javascripts/embed.js"></script>
