--- a/templates/base_no_ads.html
+++ b/templates/base_no_ads.html
@@ -66,8 +66,8 @@
     <script src="/static/js/custom.js"></script>
     {% block js %}{% end %}
 
-    {% include "social/script_google_analytics.html %}
-    {% include "social/script_facebook_like_button.html %}
-    {% include "social/script_twitter_follow_button.html %}
+    {% include "social/script_google_analytics.html" %}
+    {% include "social/script_facebook_like_button.html" %}
+    {% include "social/script_twitter_follow_button.html" %}
   </body>
 </html>
