--- a/templates/base_print.html
+++ b/templates/base_print.html
@@ -55,6 +55,6 @@
     <script src="/static/js/custom.js"></script>
     {% block js %}{% end %}
 
-    {% include "social/script_google_analytics.html %}
+    {% include "social/script_google_analytics.html" %}
   </body>
 </html>
