--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,46 +2,21 @@
   <div class="container">
       <div class="row" style="height:50px;">
         <div class="col-lg-12 text-center">
-          <span style="color:white;">@EightSecrets &nbsp; </span>
-
-          {% include "social/social_footer.html" %}
+          {% include "common/copyright.html" %}
         </div>
       </div>
 
       <div class="row" style="height:50px;">
         <div class="col-lg-4">
-          <div class="panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Donations</h3>
-            </div>
-            <div class="panel-body">
-                {% include "ads/donation_panel.html" %}
-            </div>
-          </div>
+          {% include "ads/donation_panel.html" %}
         </div>
 
         <div class="col-lg-4">
-          <div class="panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Contact</h3>
-            </div>
-            <div class="panel-body">
-              <p>email@dns.com</p>
-
-              {% include "social/social_buttons.html" %}
-            </div>
-          </div>
+          {% include "common/contact.html" %}
         </div>
 
         <div class="col-lg-4">
-          <div class="panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">About</h3>
-            </div>
-            <div class="panel-body">
-              <p></p>
-            </div>
-          </div>
+          {% include "common/about.html" %}
         </div>
     </div>
   </div>
