--- a/templates/common/contact.html
+++ b/templates/common/contact.html
@@ -13,6 +13,6 @@
 
         <a href="https://plus.google.com/b/" class="img-rounded fa fa-google-plus-square" target="_blank"></a>
 
-        <span><span class="img-rounded fa fa-skype"></span> Skype</span>
+        <a href="skype:CHANGE_HERE?userinfo"><span class="img-rounded fa fa-skype"></span> Skype</a>
     </div>
 </div>
