Templates using env vars

--- a/templates/app/main.html
+++ b/templates/app/main.html
@@ -12,6 +12,13 @@
       <ul>
         <li>Login or Social login</li>
         <li>Edit title, menu etc</li>
+        <li>{{ SYSTEM_NAME }}</li>
+        <li>{{ SYSTEM_URL }}</li>
+        <li>{{ SYSTEM_EMAIL }}</li>
+        <li>{{ DOMAIN }}</li>
+        <li>{{ DATE_FORMAT }}</li>
+        <li>{{ TIME_FORMAT }}</li>
+        <li>{{ DATETIME_FORMAT }}</li>
       </ul>
 
       <p>
