--- a/templates/common/copyright.html
+++ b/templates/common/copyright.html
@@ -1,1 +1,1 @@
-<span style="color:white;">@EightSecrets &nbsp; </span>
+<span style="color:white;">@EightSecrets &nbsp; {{ SYSTEM_NAME }} &nbsp; </span>
