--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
     </button>
 
-    <a class="navbar-brand" href="/">Your App</a>
+    <a class="navbar-brand" href="/">{{ SYSTEM_NAME }}</a>
 
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       {% include "social/social_header.html" %}
