--- a/templates/common/about.html
+++ b/templates/common/about.html
@@ -3,6 +3,6 @@
         <h3 class="panel-title">About</h3>
     </div>
     <div class="panel-body">
-      <p></p>
+      <p>{{ SYSTEM_NAME }}</p>
     </div>
 </div>
