--- a/templates/metadata.html
+++ b/templates/metadata.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>Your App</title>
+<title>{{ SYSTEM_NAME }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
