--- a/templates/social/script_facebook_like_button.html
+++ b/templates/social/script_facebook_like_button.html
@@ -1,8 +1,10 @@
+{% if FACEBOOK_API_KEY %}
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=CHANGE_HERE";
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId={{ FACEBOOK_API_KEY }}";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+{% end %}
