--- a/templates/base_print.html
+++ b/templates/base_print.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
     <link rel="stylesheet" href="http://weblibraries.s3.amazonaws.com/jquery.pnotify.default.css">
     <link rel="stylesheet" href="http://weblibraries.s3.amazonaws.com/jquery.pnotify.default.icons.css">
+    <link rel="stylesheet" href="/static/css/custom.css">
     <style type="text/css">
       body {
         padding-top: 60px;
