--- a/templates/base_print.html
+++ b/templates/base_print.html
@@ -41,6 +41,7 @@
     <script src="http://weblibraries.s3.amazonaws.com/jquery.pnotify.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/jquery.maskedinput.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/jquery.tablesorter.min.js"></script>
+    <script src="http://weblibraries.s3.amazonaws.com/jquery.form.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/moment.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/ba-linkify.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/hmac-sha256.min.js"></script>
