--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -43,3 +43,9 @@
     top: 0; bottom: 0; right: 0; left: 0; /*fill parent*/
     background-color: rgb(0, 140, 200); /*let's see it!*/
 }
+
+.admin-image {
+    display: inline;
+    width: 50px;
+    height: 50px;
+}
