header with Admin menu

--- a/templates/header.html
+++ b/templates/header.html
@@ -59,11 +59,24 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><li><a href="/account">Settings</a></li></li>
+            <li><a href="/account">Settings</a></li>
             <li><a href="/logout" class="pull-right">Log out {{ current_user.email }}</a></li>
           </ul>
         </li>
       </ul>
+
+      {% if current_user.admin %}
+      <ul class="nav navbar-nav pull-right">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/admin/">Link1</a></li>
+            <li><a href="/admin/">Link2</a></li>
+          </ul>
+        </li>
+      </ul>
+      {% end %}
+
       {% end %}
 
 
