base js template

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,10 @@
     <script src="http://weblibraries.s3.amazonaws.com/secret-rest-client.min.js"></script>
     <script src="http://weblibraries.s3.amazonaws.com/secret-data-table.min.js"></script>
     <script src="/static/js/custom.js"></script>
+    <script language="JavaScript">
+    $(document).ready(function() {
+    });
+    </script>
     {% block js %}{% end %}
 
     {% include "social/script_google_analytics.html" %}
