--- a/templates/header.html
+++ b/templates/header.html
@@ -60,7 +60,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="/account">Settings</a></li>
-            <li><a href="/logout" class="pull-right">Log out {{ current_user.email }}</a></li>
+            <li><a href="/logout">Log out {{ current_user.email }}</a></li>
           </ul>
         </li>
       </ul>
