--- a/templates/social/social_header.html
+++ b/templates/social/social_header.html
@@ -25,7 +25,7 @@
 
     {% if SKYPE_ACCOUNT %}
     <li>
-    <a href="skype:{{ SKYPE_ACCOUNT }}?userinfo"><span class="img-rounded fa fa-lg fa-skype"></span> Skype</a>
+    <a href="skype:{{ SKYPE_ACCOUNT }}?userinfo"><span class="img-rounded fa fa-lg fa-skype"></span></a>
     </li>
     {% end %}
 </ul>
