--- a/templates/social/social_header.html
+++ b/templates/social/social_header.html
@@ -1,25 +1,25 @@
 <ul class="nav navbar-nav social-icons">
     {% if GITHUB_ACCOUNT %}
     <li>
-    <a href="http://github.com/{{ GITHUB_ACCOUNT }}" class="img-rounded fa fa-lg fa-github-square" target="_blank"></a>
+    <a href="http://github.com/{{ GITHUB_ACCOUNT }}" target="_blank"><span class="img-rounded fa fa-lg fa-github-square"></span></a>
     </li>
     {% end %}
 
     {% if TWITTER_ACCOUNT %}
     <li>
-    <a href="http://twitter.com/{{ TWITTER_ACCOUNT }}" class="img-rounded fa fa-lg fa-twitter-square" target="_blank"></a>
+    <a href="http://twitter.com/{{ TWITTER_ACCOUNT }}" target="_blank"><span class="img-rounded fa fa-lg fa-twitter-square"></span></a>
     </li>
     {% end %}
 
     {% if FACEBOOK_ACCOUNT %}
     <li>
-    <a href="http://facebook.com/{{ FACEBOOK_ACCOUNT }}" class="img-rounded fa fa-lg fa-facebook-square" target="_blank"></a>
+    <a href="http://facebook.com/{{ FACEBOOK_ACCOUNT }}" target="_blank"><span class="img-rounded fa fa-lg fa-facebook-square"></span></a>
     </li>
     {% end %}
 
     {% if GOOGLE_PLUS_ACCOUNT %}
     <li>
-    <a href="https://plus.google.com/b/{{ GOOGLE_PLUS_ACCOUNT }}" class="img-rounded fa fa-lg fa-google-plus-square" target="_blank"></a>
+    <a href="https://plus.google.com/b/{{ GOOGLE_PLUS_ACCOUNT }}" target="_blank"><span class="img-rounded fa fa-lg fa-google-plus-square"></span></a>
     </li>
     {% end %}
 
