favicons and css

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
     </button>
 
     <a class="navbar-brand" href="/">{{ SYSTEM_NAME }}</a>
-    <!-- <a class="navbar-brand navbar-brand-img" href="/"><img src="" alt="{{ SYSTEM_NAME }}"/></a> -->
+    <!-- <a class="navbar-brand navbar-brand-img" href="/"><img src="" alt="{{ SYSTEM_NAME }}" class="img-rounded"/></a> -->
 
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       {% include "social/social_header.html" %}
