--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -45,8 +45,8 @@ ul.social-icons li a {
 
 .box-ratio-content {
     position: absolute;
-    top: 0; bottom: 0; right: 0; left: 0; /*fill parent*/
-    background-color: rgb(0, 140, 200); /*let's see it!*/
+    top: 0; bottom: 0; right: 0; left: 0;
+    background-color: rgb(0, 0, 0);
 }
 
 .admin-image {
