Entrada Rapida link

--- a/templates/social/other_systems.html
+++ b/templates/social/other_systems.html
@@ -2,6 +2,7 @@
   <li class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">+ Systems <b class="caret"></b></a>
     <ul class="dropdown-menu">
+      <li><a href="http://entradarapida.com" target="_blank">Entrada Rápida</a></li>
       <li><a href="http://placasmarcadas.com" target="_blank">PlacasMarcadas</a></li>
       <li><a href="http://megaloteria.net" target="_blank">MegaLoteria</a></li>
       <li><a href="http://baladasusp.com" target="_blank">BaladasUSP</a></li>
